# Distributed-Project

Client_1/: Cargo.toml
Client_1/src/: main.rs
Client_2/: Cargo.toml
Client_2/src/: main.rs
Client_3/src/: main.rs
Server_1/: Cargo.toml
Server_1/src/: main.rs
Server_2/: Cargo.toml
Server_2/src/: main.rs
Server_3/: Cargo.toml
Server_3/src/: main.rs
failure_task/: Cargo.toml
failure_task/src/: main.rs
